# socket-cli

./: README.md  _setup.py  pyproject.toml  requirements-dev.txt
skt_cli/: __main__.py  main.py
socketio_cli/: main.py
