[tool.poetry]
name = "skt-cli"
version = "0.1.0"
description = ""
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.3.2"
prompt-toolkit = "^3.0.13"
asyncio = "^3.4.3"
requests = "^2.25.1"
websockets = "^8.1"
python-socketio = "^5.0.4"
halo = "^0.0.31"
fuzzyfinder = "^2.1.0"
Pygments = "^2.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
